--- a/index.html
+++ b/index.html
@@ -7233,7 +7233,6 @@
           </div>
         </div>
 
-        
         <div class="movie-item">
           <div class="movie-content">
             <img
@@ -8281,7 +8280,7 @@
           </div>
         </div>
 
-                <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/2FJFChUeEgYpCvsLfAMXjcFtFOy.jpg"
@@ -8642,6 +8641,38 @@
             </div>
           </div>
         </div>
+
+         <div class="movie-item">
+          <div class="movie-content">
+            <img src="https://image.tmdb.org/t/p/original/9bXHaLlsFYpJUutg4E6WXAjaxDi.jpg" class="movie-poster" />
+            <h2 class="movie-title">Mufasa: The Lion King</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span>
+              </div>
+              <span class="movie-year-text">2024</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div> 
 
         <div class="movie-item">
           <div class="movie-content">
@@ -10090,6 +10121,38 @@
           </div>
         </div>
 
+         <div class="movie-item">
+          <div class="movie-content">
+            <img src="https://image.tmdb.org/t/p/original/5qGIxdEO841C0tdY8vOdLoRVrr0.jpg" class="movie-poster" />
+            <h2 class="movie-title">Nosferatu</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span>
+              </div>
+              <span class="movie-year-text">2024</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div> 
+
         <div class="movie-item">
           <div class="movie-content">
             <img
@@ -10882,6 +10945,7 @@
             </div>
           </div>
         </div>
+    
 
         <div class="movie-item">
           <div class="movie-content">
@@ -10890,6 +10954,42 @@
               class="movie-poster"
             />
             <h2 class="movie-title">Night Swim</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.0</span
+                >
+              </div>
+              <span class="movie-year-text">2024</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+           <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/58QT4cPJ2u2TqWZkterDq9q4yxQ.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Crow</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
@@ -11041,6 +11141,42 @@
                 >
               </div>
               <span class="movie-year-text">1994</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+          <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/fsb4m9XW59mei8GKznvI3lLzcfp.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Score</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.0</span
+                >
+              </div>
+              <span class="movie-year-text">2001</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -11392,6 +11528,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/nrlfJoxP1EkBVE9pU62L287Jl4D.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Kraven the Hunter</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 7.5</span
+                >
+              </div>
+              <span class="movie-year-text">2024</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/ffMUgkDZICNiyaws1Jkv8qG8uFW.jpg"
               class="movie-poster"
             />
@@ -11461,7 +11633,7 @@
           </div>
         </div>
 
-                <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/eCOtqtfvn7mxGl6nfmq4b1exJRc.jpg"
@@ -13812,7 +13984,7 @@
           </div>
         </div>
 
-                <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/jwwVNuGRUBXcudG6wOKP9U60BzU.jpg"
@@ -15551,7 +15723,7 @@
           </div>
         </div>
 
-                <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/gq3cZxo7SS6HAXdaxObLIyw9N1r.jpg"
@@ -15587,7 +15759,7 @@
           </div>
         </div>
 
-                <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/cAh2pCiNPftsY3aSqJuIOde7uWr.jpg"
@@ -15623,7 +15795,7 @@
           </div>
         </div>
 
-                <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/7PurMm0gUOJZ8Uk0oyuZlt1CKfJ.jpg"
