--- a/index.html
+++ b/index.html
@@ -8642,14 +8642,18 @@
           </div>
         </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
-            <img src="https://image.tmdb.org/t/p/original/9bXHaLlsFYpJUutg4E6WXAjaxDi.jpg" class="movie-poster" />
+            <img
+              src="https://image.tmdb.org/t/p/original/9bXHaLlsFYpJUutg4E6WXAjaxDi.jpg"
+              class="movie-poster"
+            />
             <h2 class="movie-title">Mufasa: The Lion King</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 9.0</span>
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
               </div>
               <span class="movie-year-text">2024</span>
             </div>
@@ -8672,7 +8676,7 @@
               </a>
             </div>
           </div>
-        </div> 
+        </div>
 
         <div class="movie-item">
           <div class="movie-content">
@@ -10121,14 +10125,18 @@
           </div>
         </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
-            <img src="https://image.tmdb.org/t/p/original/5qGIxdEO841C0tdY8vOdLoRVrr0.jpg" class="movie-poster" />
+            <img
+              src="https://image.tmdb.org/t/p/original/5qGIxdEO841C0tdY8vOdLoRVrr0.jpg"
+              class="movie-poster"
+            />
             <h2 class="movie-title">Nosferatu</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span>
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
               </div>
               <span class="movie-year-text">2024</span>
             </div>
@@ -10151,7 +10159,7 @@
               </a>
             </div>
           </div>
-        </div> 
+        </div>
 
         <div class="movie-item">
           <div class="movie-content">
@@ -10276,6 +10284,42 @@
                 >
               </div>
               <span class="movie-year-text">1996</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/xj63YtNo9NlnspYpLR29A9fuxBb.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Gorge</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.5</span
+                >
+              </div>
+              <span class="movie-year-text">2025</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -10945,7 +10989,6 @@
             </div>
           </div>
         </div>
-    
 
         <div class="movie-item">
           <div class="movie-content">
@@ -10983,7 +11026,7 @@
           </div>
         </div>
 
-           <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/58QT4cPJ2u2TqWZkterDq9q4yxQ.jpg"
@@ -11163,7 +11206,7 @@
           </div>
         </div>
 
-          <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/fsb4m9XW59mei8GKznvI3lLzcfp.jpg"
