--- a/Anime.html
+++ b/Anime.html
@@ -440,17 +440,17 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/kaMisKeOoTBPxPkbC3OW7Wgt6ON.jpg"
+                src="https://image.tmdb.org/t/p/original/g8nUqCgQETHP3zAxFUNCWpF5imM.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Black Clover</h2>
+              <h2 class="movie-title">Solo Leveling</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> 10.0</span
+                    ><img src="./images/IMDb_logo.png" /> 10</span
                   >
                 </div>
-                <span class="movie-year-text">2017</span>
+                <span class="movie-year-text">2024</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -476,17 +476,17 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/g8nUqCgQETHP3zAxFUNCWpF5imM.jpg"
+                src="https://image.tmdb.org/t/p/original/kaMisKeOoTBPxPkbC3OW7Wgt6ON.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Solo Leveling</h2>
+              <h2 class="movie-title">Black Clover</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> 10</span
+                    ><img src="./images/IMDb_logo.png" /> 10.0</span
                   >
                 </div>
-                <span class="movie-year-text">2024</span>
+                <span class="movie-year-text">2017</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1484,6 +1484,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/d9aqYyDymdl0HhexUQMT6dKUM4r.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Devil May Cry</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2025</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/PDe8WZHxH6XxM6Buxoo99aQrgw.jpg"
                 class="movie-poster"
               />
@@ -1495,6 +1531,42 @@
                   >
                 </div>
                 <span class="movie-year-text">2024</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/bkeiYRYgQjJBItx9x3Fnia2XT3t.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Super Cube</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2025</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1628,17 +1700,17 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/nssV1RhC66B6XKnvF3Tzxj40fcX.jpg"
+                src="https://image.tmdb.org/t/p/original/aCGdpgNkgz66R1winFkTFsMAhlC.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">SAKAMOTO DAYS</h2>
+              <h2 class="movie-title">Shangri-La Frontier</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
                     ><img src="./images/IMDb_logo.png" /> 8.5</span
                   >
                 </div>
-                <span class="movie-year-text">2025</span>
+                <span class="movie-year-text">2023</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -2132,6 +2204,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/nssV1RhC66B6XKnvF3Tzxj40fcX.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">SAKAMOTO DAYS</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2025</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/yBj5Pay8FtVTkAkIy6bUc3NLTnw.jpg"
                 class="movie-poster"
               />
@@ -2165,7 +2273,7 @@
             </div>
           </div>
 
-                    <div class="movie-item">
+          <div class="movie-item">
             <div class="movie-content">
               <img
                 src="https://image.tmdb.org/t/p/original/tSH5Jqbn8Gwe3gzC8zVwYXkEPma.jpg"
@@ -2308,8 +2416,6 @@
               </div>
             </div>
           </div>
-
-
 
           <div class="movie-item">
             <div class="movie-content">
@@ -2613,6 +2719,42 @@
                   >
                 </div>
                 <span class="movie-year-text">2023</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/az0jQSgRLezKw5uHaEjPH20NexD.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Beginning After the End</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> TBA</span
+                  >
+                </div>
+                <span class="movie-year-text">2025</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
